[package]
name = "asm-delay"
version = "0.6.1-alpha.0"
authors = ["Roma Sokolov <sokolov.r.v@gmail.com>"]
description = "no_std implementation of embedded-hal DelayMs & DelayUs based on arm::delay"
keywords = ["arm", "cortex-m", "time"]
license = "MIT"
readme = "Readme.md"
edition = "2018"
repository = "https://github.com/copterust/asm-delay"

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.5.8"
bitrate = "0.1.1"
