[package]
name = "asm-delay"
version = "0.8.1"
authors = ["Roma Sokolov <sokolov.r.v@gmail.com>"]
description = "no_std implementation of embedded-hal DelayMs & DelayUs based on arm::delay"
keywords = ["arm", "cortex-m", "time"]
license = "MIT"
readme = "README.md"
edition = "2018"
repository = "https://github.com/copterust/asm-delay"

[dependencies]
embedded-hal = ">= 0.2"
cortex-m = ">= 0.6"
embedded-time = "0.6.0"
